# CEX-superdevs

./: .gitignore  Cargo.toml  README.md  doubts.md  package.json  task.md
apps/backend/: Cargo.toml
apps/backend/src/: inputs.rs  main.rs  orderbook.rs  output.rs  routes.rs  websocket.rs
apps/frontend/: package.json
apps/frontend/src/app/: globals.css  page.tsx
apps/frontend/src/components/: ActivityPanel.tsx  CandlestickChart.tsx  MarketHeader.tsx  OpenPositions.tsx  OrderBook.tsx  OrderForm.tsx  PriceChart.tsx  RecentTrades.tsx  TradesPanel.tsx  TradingBotPanel.tsx  TradingChart.tsx
apps/frontend/src/lib/: api.ts  useTradingBot.ts  useWebSocket.ts
src/: inputs.rs  main.rs  orderbook.rs  output.rs  routes.rs
