[package]
name = "superdevs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-actors = "4.3"    # WebSocket support
actix-cors = "0.7"
actix = "0.13"              # Actor framework
tokio = { version = "1", features = ["sync"] }  # For broadcast channel
expand = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
